--- a/podcastr/package.json
+++ b/podcastr/package.json
@@ -9,6 +9,7 @@
     "server": "json-server server.json -w -d 750 -p 3333"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "date-fns": "^2.21.1",
     "next": "10.1.3",
     "react": "17.0.2",
@@ -19,6 +20,7 @@
     "@types/node": "^14.14.41",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "json-server": "^0.16.3",
     "typescript": "^4.2.4"
   }
 }
