--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,15 @@
 
 # dependencies
 **/node_modules
+**/.pnp
+**.pnp.js
+
+# testing
+**/coverage
 
 # next.js
 **/.next/
 **/out/
 
+# expo
+**.expo/
