--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,27 @@
 # dependencies
 **/node_modules
 
+# testing
+**/coverage
+
 # next.js
 **/.next/
 **/out/
 
+# expo
+**.expo/
+
+# production
+**/build
+
+# misc
+**.DS_Store
+*.pem
+
+# debug
+**npm-debug.log*
+**yarn-debug.log*
+**yarn-error.log*
+
+# vercel
+**.vercel
